--- a/.github/workflows/ok.yml
+++ b/.github/workflows/ok.yml
@@ -26,8 +26,8 @@ jobs:
         with:
             registry: ghcr.io
             username: ${{ github.actor }}
-            password: ${{ secrets.GHCR_PAT }}
-
+            password: ${{ secrets.GHCR_PAT_ME }}
+           
       - name: Build image and push to GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
