--- a/.github/workflows/ok.yml
+++ b/.github/workflows/ok.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@v1
         with:
             registry: ghcr.io
-            username: ${{ github.actor }}
+            username: capacitacion-ultra
             password: ${{ secrets.GHCR_PAT_ME }}
            
       - name: Build image and push to GitHub Container Registry
